# SiteAuth

./: main.py  pyproject.toml
website/: __init__.py  auth.py  database.db  models.py  views.py
website/templates/: base.html  home.html  login.html  sign_up.html
