[tool.poetry]
name = "repl_python3_SiteAuth"
version = "0.1.0"
description = ""
authors = ["Gabriel Wessling <distopiarte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
flask-login = "^0.5.0"
sqlalchemy = "^1.4.15"
flask-sqlalchemy = "^2.5.1"
werkzeug = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
